# KClaude

./: .gitignore  .packit.yaml  CMakeLists.txt  Messages.sh  README.md  rename.sh
.github/workflows/: deb.yml  obs-submit.yml
debian/: changelog  control  rules  watch
krunner/: README.md  de.agundur.kclauderunner.desktop  de.agundur.kclauderunner.service  install.sh  kclauderunner.py  uninstall.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: FullRepresentation.qml  ShellQuote.js  main.qml
package/plugin/: CMakeLists.txt  FileReader.cpp  FileReader.h  TerminalHost.cpp  TerminalHost.h
packaging/: kclaude.spec
scripts/: claude-notify.sh  claude-running.sh  claude-statusline.sh
tests/: tst_plasmoid.qml
translate/: kclaude.pot
translate/de/: plasma_applet_de.agundur.kclaude.po
translate/es/: plasma_applet_de.agundur.kclaude.po
translate/fr/: plasma_applet_de.agundur.kclaude.po
